新增Service生命周期

--- a/AppActivityLifeCycle/app/build.gradle
+++ b/AppActivityLifeCycle/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.chen.pa.androidactivitydemo"
-        minSdkVersion 23
+        applicationId "com.chen.pa.app"
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
