更改目录结构

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".app_service.LifeCycleService"
+            android:name=".service.LifeCycleService"
             android:enabled="true" />
 
         <activity
-            android:name=".app_activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
         </activity>
 
         <activity
-            android:name=".app_activity.SecondActivity" />
+            android:name=".activity.SecondActivity" />
         <!--     android:theme="@style/AppThemeTranslucent"  />-->
         <!--     当minSdkVersion和targetSdkVersion有一个大于13，配置,orientation和screenSize，旋转屏幕就不会重建Activity  />-->
         <!--     当minSdkVersion和targetSdkVersion都小于13，配置,orientation，旋转屏幕就不会重建Activity ，不重建就不会更换背景图片啦 />-->
