--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chen.pa">
+    package="com.lifecycle.launchmode">
 
     <application
         android:allowBackup="true"
@@ -8,12 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service
-            android:name=".service.LifeCycleService"
-            android:enabled="true" />
-
         <activity
-            android:name=".activity.MainActivity"
+            android:name="com.lifecycle.launchmode.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,12 +18,18 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".activity.SecondActivity" />
+        <activity android:name=".SaveActivity" />
+        <activity android:name=".AActivity" />
+        <activity android:name=".BActivity" />
+        <activity android:name=".ServiceActivity" />
+
+        <service
+            android:name="com.lifecycle.launchmode.LifeCycleService"
+            android:enabled="true" />
         <!--     android:theme="@style/AppThemeTranslucent"  />-->
         <!--     当minSdkVersion和targetSdkVersion有一个大于13，配置,orientation和screenSize，旋转屏幕就不会重建Activity  />-->
         <!--     当minSdkVersion和targetSdkVersion都小于13，配置,orientation，旋转屏幕就不会重建Activity ，不重建就不会更换背景图片啦 />-->
         <!--   android:configChanges="orientation|screenSize" />-->
-     </application>
+    </application>
 
- </manifest>
+</manifest>
