--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <!--生命周期-->
         <activity android:name=".life.AActivity" />
         <activity android:name=".life.BActivity" />
-        <activity android:name=".service.ServiceActivity" />
+        <activity android:name=".service.ServiceLifeCycleActivity" />
 
         <!--保存状态-->
         <activity android:name=".saverestore.SaveActivity" />
