--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,7 +111,7 @@
 
         <!-- fragment -->
         <activity
-            android:name=".MainActivity"
+            android:name=".homefragment.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -119,6 +119,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- viewpager-->
+        <activity
+            android:name=".viewpager.ViewPagerStateActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
